# esp32-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run.sh
src/: esp32_bindings.cpp  esp32_bindings.h  esp32_device.cpp  esp32_device.h  esp32_instruction.cpp  esp32_instruction.h  esp32_status.cpp  esp32_status.h
src/instruction_binding/: mem.h  misc.h  uart.h
